<resources>
    <string name="app_name">NewdayNewLife</string>
    <string name="music_name">music name</string>
    <string name="stop">暂停</string>
    <string name="author_name">author name</string>
    <string name="weather">weather</string>
    <string name="date">date</string>
    <string name="music">music</string>
    <string name="wind">wind</string>
    <string name="temperature">temperature</string>
    <string name="current_time">%1$d年%2$d月%3$d日</string>
    <string name="loading">缓存中</string>

</resources>
