<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/colorMusic1">

    <TextView
        android:id="@+id/weather_item_data"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
       />
    <TextView
        android:id="@+id/weather_item_temperature"
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
    />
    <TextView
        android:id="@+id/weather_item_wind"
        android:text="@string/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
      />
</LinearLayout>